test/sema/negative/movesema/non_init.impala
fn f() -> () {
    let a: int;
    let b = a;
}
